# 15-Minute-Venice

./: .buildinfo  .coverage  .gitignore  CMakeLists.txt  Dockerfile  LOGGING.md  README.md  README_15min_analysis.md  README_DATA.md  api.html  compute_nearest_bottega_by_parish.py  compute_nearest_bottegas.py  demo_analysis.py  docker-compose.yml  genindex.html  index.html  objects.inv  path_heatmap.py  py-modindex.html  pyproject.toml  quick_test.py  requirements.txt  search.html  searchindex.js  test_paths.py
.github/: copilot-instructions.md
.github/workflows/: docs.yml  tests.yml
_autosummary/: urbanflow.RasterGrid.html  urbanflow.RasterGridWithPOIs.html  urbanflow.cpp.html  urbanflow.cpp.path_planner.html  urbanflow.html  urbanflow.logging_config.html  urbanflow.utils.courtyard_utils.html  urbanflow.utils.grid_utils.html  urbanflow.utils.html  urbanflow.utils.poi_utils.html  urbanflow.utils.sommarioni_utils.html
_modules/: index.html
_modules/urbanflow/: RasterGrid.html  RasterGridWithPOIs.html
_modules/urbanflow/utils/: courtyard_utils.html  grid_utils.html  poi_utils.html  sommarioni_utils.html
_sources/: api.rst.txt  index.rst.txt
_sources/_autosummary/: urbanflow.cpp.path_planner.rst.txt  urbanflow.logging_config.rst.txt  urbanflow.rst.txt  urbanflow.utils.poi_utils.rst.txt
docs/: requirements.txt
docs/source/: api.rst  conf.py
docs/source/_autosummary/: urbanflow.RasterGrid.rst  urbanflow.RasterGridWithPOIs.rst  urbanflow.cpp.path_planner.rst  urbanflow.cpp.rst  urbanflow.rst  urbanflow.utils.courtyard_utils.rst  urbanflow.utils.grid_utils.rst  urbanflow.utils.rst  urbanflow.utils.sommarioni_utils.rst
notebooks/: AnalyzeNeedPaths.ipynb  AnalyzeNeeds.ipynb  ComputeNeedsPaths.ipynb  GridifyTest.ipynb  PozzoPaths.ipynb  ShoppingPathCompute.ipynb
reports/: coverage.xml
results/: 5min_poi_type_stats.csv  5min_walkability_results.csv  5min_walkability_results_extended.csv
scripts/: build_path_needs.py  compute_all_paths.py
src/: 1808_gridify.py  1808_gridify_old.py  RasterGrid.py  RasterGridWithPOIs.py  calculate_poi_paths.py  calculate_poi_paths_old.py  gridify.py  sample_pois.py  viz_grid.py  viz_grid_old.py
src/urbanflow/: RasterGrid.py  RasterGridWithPOIs.py  __init__.py  calculate_poi_paths_old.py  logging_config.py  viz_grid_old.py
src/urbanflow/cpp/: CMakeLists.txt  path_planner.cpp  path_planner.py
src/urbanflow/utils/: __init__.py  courtyard_utils.py  grid_utils.py  poi_utils.py  raster_utils.py  sommarioni_utils.py
src_cpp/: batch_path_builder.cpp  grid_poi_diagnostics.cpp
test/: test_raster_grid.py  test_sommarioni_utils.py
tests/: check_coverage.py  test_cpp_binding.py  test_missing_coverage.py  test_raster_grid.py  test_rastergrid.py  test_rastergrid_with_pois.py  test_utils.py
urbanflow/: pyproject.toml
utils/: courtyard_utils.py  grid_utils.py  poi_utils.py  sommarioni_utils.py
