[build-system]
requires = [
    "scikit-build-core[pyproject] >= 0.8",
    "pybind11 >= 2.12",          
    "wheel",
]
build-backend = "scikit_build_core.build"


[project]
name = "urbanflow"
version = "0.1.0"
authors = [
  { name="Clay Foye", email="clay.foye@gmail.com" },
]
description = "A package to rasterize GeoJson files of cities and calculate morphologies of travel between POIs."
readme = "README.md"
requires-python = ">=3.11.10"
dependencies = [
  "numpy>=1.24",
  "shapely>=2.0",
  "matplotlib>=3.7",
  "pandas>=2.0",
  "geopandas>=0.14",
  "affine>=2.4",
  "Pillow>=10.0",           
  "tcod>=19.4",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]


[project.optional-dependencies]
docs = [
  "sphinx>=7",
  "furo",
  "myst-parser",
  "sphinx-autodoc-typehints",
  "sphinxcontrib-napoleon",
  "sphinx-copybutton",
]

