[build-system]
requires = [
    "scikit-build-core[pyproject] >= 0.10",
    "pybind11 >= 2.12",
    "setuptools",    
    "wheel",
]
build-backend = "scikit_build_core.build"


[project]
name = "urbanflow"
version = "0.1.0"
authors = [
  { name="Clay Foye", email="clay.foye@gmail.com" },
]
description = "A package to rasterize GeoJson files of cities and calculate morphologies of travel between POIs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24",
  "shapely>=2.0",
  "matplotlib>=3.7",
  "pandas>=2.0",
  "pyarrow",
  "geopandas>=0.14",
  "affine>=2.4",
  "Pillow>=10.0",           
  "tcod>=19.4",
  "scipy>=1.10",
  "rasterio>=1.3"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]


[project.optional-dependencies]
docs = [
  "sphinx>=7",
  "furo",
  "myst-parser",
  "sphinx-autodoc-typehints",
  "sphinxcontrib-napoleon",
  "sphinx-copybutton",
]
dev = [
  "pytest>=8", 
  "pytest-cov>=5", 
  "ruff", 
  "mypy", 
  "rasterio",
  "ipython"]

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
cmake.verbose = true
ninja.make-fallback = false