[build-system]
requires = [
    "scikit-build-core[pyproject] >= 0.8",
    "pybind11 >= 2.12",          
    "wheel",
]
build-backend = "scikit_build_core.build"

[project]
name = "urbanflow"
version = "0.0.1"
authors = [
  { name="Clay Foye", email="clay.foye@gmail.com" },
]
description = "A package to rasterize GeoJson files of cities and calculate morphologies of travel between POIs."
readme = "README.md"
requires-python = ">=3.11.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[tool.scikit-build]
# Pure C++ → no Python sources to scan
wheel.expand-macos-universal-tags = true   # one fat wheel on macOS
minimum-cmake-version = "3.16"
